--- a/public/css/create.css
+++ b/public/css/create.css
@@ -1,11 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600&family=Montserrat:wght@600&display=swap");
-
-body {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600px;
-    background-color: rgba(243, 243, 243, 1);
-}
-
 /* Main */
 .wrapper {
     background-color: white;
@@ -20,6 +12,11 @@ body {
     width: 258px;
     height: 68px;
     background-color: #6491ee;
+}
+
+.button-container-danger button {
+    width: 258px;
+    height: 68px;
 }
 
 .button-text {
